prevent overflow on mobile

--- a/sites/theme-generator/src/styles/base.css
+++ b/sites/theme-generator/src/styles/base.css
@@ -22,7 +22,7 @@
   }
 
   body {
-    @apply text-background-950-50 bg-background-50-950 overflow-x-hidden;
+    @apply text-background-950-50 bg-background-50-950 overflow-x-hidden w-screen;
   }
 
   button:not(:disabled) {
